Updated html and main.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome to Hogwarts</h1>
         <p class="lead">
-          In this school of Witchcraft and Wizardy you will be sorted into one of the Four Houses. Gryiffindor, Slytherin, HufflePuff, or Ravenclaw!
+          In this school of Witchcraft and Wizardy you will be sorted into one of the Four Houses: Gryiffindor, Slytherin, HufflePuff, or Ravenclaw!
         </p>
         <hr class="my-4" />
         <div id="sortingHatButton">
